tests/snapshots/snapshot_tests__array_init_double.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_double.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a i i) i) i)",
        "(= (Read-Int-Int (Write-Int-Int b i i) i) i)",
        "(= (Read-Int-Int (Write-Int-Int b Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!2 Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!2 Z Z) Z) (Read-Int-Int Array-Int-Int!val!2 Z))",
        "(= (Read-Int-Int (Write-Int-Int a i i) i) (Read-Int-Int a i))",
        "(= (Read-Int-Int (Write-Int-Int b Z Z) Z) (Read-Int-Int b Z))",
        "(= (Read-Int-Int (Write-Int-Int b i i) i) (Read-Int-Int b i))",
    ],
}
