tests/snapshots/snapshot_tests__array_init_double_const.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_double_const.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a i i) i) i)",
        "(= (Read-Int-Int (Write-Int-Int b i i) i) i)",
        "(= (Read-Int-Int (Write-Int-Int a Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int b_next Z i) Z) i)",
        "(= (Read-Int-Int (Write-Int-Int b Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int b i i) i) (Read-Int-Int b i))",
        "(= (Read-Int-Int (Write-Int-Int a Z Z) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int b Z Z) Z) (Read-Int-Int b Z))",
        "(= (Read-Int-Int (Write-Int-Int b Z i_next) Z) i_next)",
        "(= (Read-Int-Int (Write-Int-Int a i i) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int a i i) i) (Read-Int-Int a i))",
        "(= (Read-Int-Int (Write-Int-Int b Z N) Z) (Read-Int-Int b Z))",
    ],
}
