tests/snapshots/snapshot_tests__array_init_increm_twice_const.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_increm_twice_const.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a i (+ (Read-Int-Int a i) Z)) i) (+ (Read-Int-Int a i) Z))",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!2 Z (+ (Read-Int-Int Array-Int-Int!val!2 Z) Z)) Z) (+ (Read-Int-Int Array-Int-Int!val!2 Z) Z))",
        "(= (Read-Int-Int (Write-Int-Int a i (+ (Read-Int-Int a i) 1)) i) (+ (Read-Int-Int a i) 1))",
        "(= (Read-Int-Int (Write-Int-Int a i (+ (Read-Int-Int a i) 1)) i) (Read-Int-Int a i))",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!2 Z (+ (Read-Int-Int Array-Int-Int!val!2 Z) Z)) Z) (Read-Int-Int Array-Int-Int!val!2 Z))",
        "(= (Read-Int-Int (Write-Int-Int a i (+ (Read-Int-Int a i) Z)) i) (Read-Int-Int a i))",
    ],
}
